fix overlay issues on mobile

--- a/src/pages/styles/illustrations.module.scss
+++ b/src/pages/styles/illustrations.module.scss
@@ -29,48 +29,7 @@
         }
 
         .overlay {
-            padding: 5px 0;
-            margin: 0;
-            cursor: pointer;
-            border: none;
-            background-color: transparent;
-            overflow: hidden;
-            width: 100%;
-            height: 100%;
-
-            &::after {
-                content: " ";
-                position: absolute;
-                top: 10px;
-                right: 10px;
-                bottom: 10px;
-                left: 10px;
-                background-color: grey;
-                opacity: 0;
-                transition: opacity .2s;
-                pointer-events: none;
-            }
-
-            .heart {
-                position: absolute;
-                bottom: 15px;
-                left: 15px;
-                z-index: 10;
-                opacity: 0;
-                transition: opacity .2s;
-            }
-        }
-
-        &:hover {
-            .overlay{
-                &::after {
-                    opacity: 0.35;
-                }
-
-                .heart {
-                    opacity: 1;
-                }
-            }
+            display: none;
         }
     }
 }
@@ -105,7 +64,46 @@
             }
 
             .overlay {
-                top: 10px; right: 10px; bottom: 10px; left: 10px;
+                display: initial;
+                padding: 5px 0;
+                margin: 0;
+                cursor: pointer;
+                border: none;
+                background-color: transparent;
+                overflow: hidden;
+                width: 100%;
+                height: 100%;
+    
+                &::after {
+                    content: " ";
+                    position: absolute;
+                    top: 10px; right: 10px; bottom: 10px; left: 10px;
+                    background-color: grey;
+                    opacity: 0;
+                    transition: opacity .2s;
+                    pointer-events: none;
+                }
+    
+                .heart {
+                    position: absolute;
+                    bottom: 15px;
+                    left: 15px;
+                    z-index: 10;
+                    opacity: 0;
+                    transition: opacity .2s;
+                }
+            }
+    
+            &:hover {
+                .overlay{
+                    &::after {
+                        opacity: 0.35;
+                    }
+    
+                    .heart {
+                        opacity: 1;
+                    }
+                }
             }
         }
     }
